--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             --file Dockerfile \
-            --tag ${{ secrets.DOCKER_USERNAME }}/pharmetrade:latest \
+            --tag ${{ secrets.DOCKER_USERNAME }}/pharmetrade1:latest \
             --push .
