--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
           
           docker buildx build \
             --platform linux/amd64 \
+            --file Dockerfile \
             --tag $IMAGE_NAME \
             --push .
