--- a/Pharmetrade1/.github/workflows/main.yml
+++ b/Pharmetrade1/.github/workflows/main.yml
@@ -3,14 +3,14 @@ name: Build and Push Docker Image on Commit
 on:
   push:
     branches:
-      - main  # Change this to the branch that should trigger the action
+      - Dev-Pharma-Etrade  # Change this to the branch you want to trigger the action
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -18,20 +18,14 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}  # Secret for Docker Hub username
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Secret for Docker Hub password
 
       # Step 3: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker-container
 
-      # Step 4: Build and push Docker image
-      - name: Build and Push Docker Image
+      # Step 4: Build the Docker image using Docker Buildx
+      - name: Build Docker image
         run: |
-          docker buildx build \
-            --platform linux/amd64 \
-            --file Dockerfile \
-            --tag ${{ secrets.DOCKER_USERNAME }}/pharmetrade1:latest \
-            --push .
+          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/pharmetrade:1.0 . --push
