--- a/Pharmetrade1/.github/workflows/main.yml
+++ b/Pharmetrade1/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image on Commit
 on:
   push:
     branches:
-      - Dev-Pharma-Etrade  # Change this to the branch you want to trigger the action
+      - main  # Change this to the branch you want to trigger the action
 
 jobs:
   build-and-push:
@@ -28,4 +28,4 @@ jobs:
       # Step 4: Build the Docker image using Docker Buildx
       - name: Build Docker image
         run: |
-          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/pharmetrade:1.0 . --push
+          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/pharmetrade:latest . --push
