--- a/Pharmetrade1/.github/workflows/main.yml
+++ b/Pharmetrade1/.github/workflows/main.yml
@@ -10,22 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Log in to Docker Hub
+      # Step 2: Verify that the Dockerfile exists
+      - name: Check for Dockerfile
+        run: |
+          if [ ! -f Dockerfile ]; then
+            echo "Error: Dockerfile not found!"
+            exit 1
+          fi
+          ls -al  # List files to confirm the structure
+
+      # Step 3: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Secret for Docker Hub username
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Secret for Docker Hub password
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Set up Docker Buildx
+      # Step 4: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 4: Build the Docker image using Docker Buildx
-      - name: Build Docker image
+      # Step 5: Build and push the Docker image
+      - name: Build and push Docker image
         run: |
-          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/pharmetrade:latest . --push
+          docker buildx build --platform linux/amd64 \
+            -t ${{ secrets.DOCKER_USERNAME }}/pharmetrade:1.0 \
+            -f Dockerfile . --push
